# ACG-hw1

./: CMakeLists.txt  README.md  compile.bat  compile.sh
assets/meshes/: CMakeLists.txt
src/: main.cpp  mesh.cpp  mesh.h
